# CyberGuard

./: README.md
main/: README.md  db.json  pyproject.toml
main/app/: server.py
main/app/evaluation/: boxplots.py  cases.json  graph.py  plot_averages.py  plot_averages_syntactic_refinement.py  semantic.py  syntactic.py
main/app/extraction/: metadata.py  syntactic_refinement.py  utils.py  variables.py  workflow.py
main/app/routes/: analyze.py  cacao_questions.py  evaluation.py  evaluation_script.py  llama.py  main.py  playbook.py  roaster.py  secure_bert.py  translation_script.py
main/app/utils/: cacao.py  cacao_builder.py  cacao_spec.py  db.py  files.py  get_vector_store.py  portkey.py  prompts.py  tokens.py
playbooks/: example_output.md
playbooks/evaluation_dataset/: playbooks.json
playbooks/evaluation_dataset/demisto/: playbook-Email_Address_Enrichment_Generic_Test.yml
playbooks/semantic_evaluation_dataset/fortinet/: Alert - Update SLA Details.json  (+2 more)
playbooks/translated/: AWS_IAM_Account_Locking.json  AWS_IAM_Account_Unlocking.json  Alert - Update SLA Details.json  Cisco_Umbrella_DNS_Denylisting.json  Few_Shot_Metadata_AWS_IAM_Account_Locking.json  Few_Shot_Metadata_Cisco_Umbrella_DNS_Denylisting.json  playbook-Email_Address_Enrichment_Generic_Test.json  test_splunk_parallel.json
playbooks/unstructured/: Approval - On Create.json  Few_Shot_Metadata_AWS_IAM_Account_Locking.json  Few_Shot_Metadata_Cisco_Umbrella_DNS_Denylisting.json  splunk_if_condition.json  test_splunk_parallel.json  test_splunk_parallel2.json  test_splunk_parallel_combined.json
(+3 files in other folders)
